--- a/src/styles/ChoosePlanet.css
+++ b/src/styles/ChoosePlanet.css
@@ -1,12 +1,13 @@
 .ChoosePlanet {
 	width: 100%;
+	padding-left: 5px;
+	margin-bottom: 20px;
 }
 
 .ChoosePlanet__Select {
 	display: block;
 	width: 180px;
-	margin-bottom: 20px;
-	padding: 10px 3px;
+	padding: 10px 5px;
 	border-radius: 5px;
 	background-image: linear-gradient(180deg, white, rgba(0, 0, 0, 0.1));
 	font-size: 16px;
