--- a/src/styles/MissionPlan.css
+++ b/src/styles/MissionPlan.css
@@ -3,6 +3,7 @@
 	position: relative;
 	width: 100%;
 	justify-content: center;
+	margin-bottom: 50px;
 }
 
 .MissionPlan-destinations {
@@ -12,20 +13,20 @@
 }
 
 .MissionPlan-destination {
-	padding: 30px;
-	margin-left: 10px;
+	margin-left: 50px;
 	margin-top: 10px;
 	border-radius: 5px;
 }
 
 .MissionPlan-time {
 	position: absolute;
+	bottom: -35px;
 	font-size: 20px;
 	font-weight: bold;
 }
 
 .MissionPlan-title {
 	margin-bottom: 10px;
-	padding-left: 5px;
+	padding-left: 10px;
 	font-size: 20px;
 }
