--- a/src/styles/MissionPlan.css
+++ b/src/styles/MissionPlan.css
@@ -1,9 +1,8 @@
 .MissionPlan {
 	display: flex;
 	position: relative;
-	width: 100%;
 	justify-content: center;
-	margin-bottom: 50px;
+	padding: 30px 55px 30px 0;
 }
 
 .MissionPlan-destinations {
@@ -14,19 +13,22 @@
 
 .MissionPlan-destination {
 	margin-left: 50px;
-	margin-top: 10px;
 	border-radius: 5px;
 }
 
 .MissionPlan-time {
 	position: absolute;
-	bottom: -35px;
+	bottom: 0;
+	left: 50%;
 	font-size: 20px;
 	font-weight: bold;
+	transform: translate(-50%, 0);
 }
 
 .MissionPlan-title {
 	margin-bottom: 10px;
 	padding-left: 10px;
 	font-size: 20px;
+	text-shadow: 1px 1px 1.5px black, -1px -1px 1.5px black;
+	color: white;
 }
