--- a/src/styles/AssignRocket.css
+++ b/src/styles/AssignRocket.css
@@ -1,7 +1,9 @@
 .AssignRocket {
 	width: 100%;
-	padding-left: 5px;
-	border-left: 5px solid black;
+	padding: 10px;
+	box-shadow: 0px 0px 4px -2.5px black;
+	background-image: linear-gradient(180deg, white, rgba(255,250,240));
+	border-radius: 10px;
 }
 
 .AssignRocket__option {
