--- a/src/styles/falcone.css
+++ b/src/styles/falcone.css
@@ -2,6 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	height: 100vh;
+	background: rgb(255,250,240);
 }
 
 .Falcone-button {
