--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -28,6 +28,7 @@
 .Navbar__reset, 
 .Navbar__results {
 	display: inline-block;
+	margin-left: 20px;
 	padding: 10px;
 	border-radius: 10px;
 	border-left: 5px solid grey;
