--- a/src/styles/falcone.css
+++ b/src/styles/falcone.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 100vh;
+	min-height: 100vh;
 	background: rgb(255,250,240);
 }
 
@@ -13,4 +13,12 @@
 	font-weight: bold;
 	border-radius: 10px;
 	transition: all 1s;
+}
+
+.Falcone__main {
+	flex-grow: 2;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0 20px;
 }
