--- a/src/styles/MissionPlan.css
+++ b/src/styles/MissionPlan.css
@@ -1,6 +1,6 @@
 .MissionPlan {
 	position: relative;
-	padding: 30px 55px 80px 0;
+	padding: 30px 50px 30px 30px;
 	min-height: 400px;
 	min-width: 70%;
 	border-left: 10px solid grey;
