--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -112,7 +112,8 @@
 		position: absolute;
 		top: 10px;
 		right: 0;
-		padding: 15px;
+		width: 30px;
+		height: 30px;
 		content: '';
 		background-image: url(../Images/reset.png);
 		background-size: cover;
