--- a/src/styles/Message.css
+++ b/src/styles/Message.css
@@ -8,3 +8,10 @@
 	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
 }
+
+@media screen and (max-width: 900px) {
+	.Message {
+		bottom: 5px;
+		left: 5px;
+	}
+}
